<resources>
    <string name="app_name">Caffey</string>

    <string name="coffee_size_title">Choose your coffee size</string>
    <string name="coffee_type_title">Choose your coffee type</string>
    <string name="coffee_sugar_title">How much sugar</string>

    <string name="coffee_brewing_title">Brewing</string>
    <string name="coffee_brewing_text">Relax while your coffee is prepared</string>
    <string name="coffee_summary_title">Summary</string>

    <string name="espresso">Espresso</string>
    <string name="americano">Americano</string>
    <string name="cappuccino">Cappuccino</string>

    <string name="next">Next</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="coffee_size">Coffee Size</string>
    <string name="coffee_type">Coffee Type</string>
    <string name="sugar">Sugar</string>
    <string name="pay">Pay</string>
    <string name="brewing">Brewing</string>

</resources>
