<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBrown"
    tools:context="com.savoirfairelinux.caffey.ui.MainActivity">

    <TextView
        android:id="@+id/typeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/coffee_brewing_title"
        android:textAllCaps="true"
        android:textColor="@color/colorBrown"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconBrewing"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_brewing"
        android:tint="@color/colorBrown"
        app:layout_constraintBottom_toTopOf="@id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeTitle" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/coffee_brewing_text"
        android:textColor="@color/colorBrown"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout"
        app:layout_constraintTop_toBottomOf="@+id/iconBrewing" />

    <View
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorLightBlue"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/circle_1"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/coffee_type"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_2"
        app:layout_constraintStart_toEndOf="@id/circle_1"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_2"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_2"
        app:layout_constraintStart_toEndOf="@id/text_1"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/coffee_size"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_3"
        app:layout_constraintStart_toEndOf="@id/circle_2"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_3"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_3"
        app:layout_constraintStart_toEndOf="@id/text_2"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/sugar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_4"
        app:layout_constraintStart_toEndOf="@id/circle_3"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_4"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_4"
        app:layout_constraintStart_toEndOf="@id/text_3"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/pay"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_5"
        app:layout_constraintStart_toEndOf="@id/circle_4"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_5"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_5"
        app:layout_constraintStart_toEndOf="@id/text_4"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_5"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/brewing"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/circle_5"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

</android.support.constraint.ConstraintLayout>
