<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBrown"
    tools:context="com.savoirfairelinux.caffey.MainActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/coffee_sugar_title"
        android:textAllCaps="true"
        android:textColor="@color/colorBrown"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_bg"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="-"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/minusButton"
        app:layout_constraintEnd_toEndOf="@id/minusButton"
        app:layout_constraintStart_toStartOf="@id/minusButton"
        app:layout_constraintTop_toTopOf="@id/minusButton" />

    <TextView
        android:id="@+id/sugarLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="2"
        android:textAllCaps="true"
        android:textColor="@color/colorBrown"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintStart_toEndOf="@id/minusButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_bg"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/minusButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="+"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/addButton"
        app:layout_constraintEnd_toEndOf="@id/addButton"
        app:layout_constraintStart_toStartOf="@id/addButton"
        app:layout_constraintTop_toTopOf="@id/addButton" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBrown"
        android:drawableTint="@color/colorBrown"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addText"
        android:textColor="@android:color/white"/>

    <View
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorLightBlue"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/circle_1"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/coffee_type"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_2"
        app:layout_constraintStart_toEndOf="@id/circle_1"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_2"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_2"
        app:layout_constraintStart_toEndOf="@id/text_1"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/coffee_size"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_3"
        app:layout_constraintStart_toEndOf="@id/circle_2"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_3"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_3"
        app:layout_constraintStart_toEndOf="@id/text_2"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/sugar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_4"
        app:layout_constraintStart_toEndOf="@id/circle_3"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_4"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_outline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_4"
        app:layout_constraintStart_toEndOf="@id/text_3"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/pay"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_5"
        app:layout_constraintStart_toEndOf="@id/circle_4"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_5"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_outline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_5"
        app:layout_constraintStart_toEndOf="@id/text_4"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_5"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/brewing"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/circle_5"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

</android.support.constraint.ConstraintLayout>
