<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBrown"
    tools:context="com.savoirfairelinux.caffey.ui.MainActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/coffee_size_title"
        android:textAllCaps="true"
        android:textColor="@color/colorBrown"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_1"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorLightBlue"
        android:background="@drawable/button_bg_selected"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/view_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeTitle" />

    <TextView
        android:id="@+id/textSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/small"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/view_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_1" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:elevation="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_small"
        app:layout_constraintBottom_toTopOf="@id/textSmallPrice"
        app:layout_constraintEnd_toStartOf="@id/view_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSmall" />

    <TextView
        android:id="@+id/textSmallPrice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/small"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/view_1"
        app:layout_constraintEnd_toStartOf="@id/view_2"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_2"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorLightBlue"
        android:background="@drawable/button_bg_selected"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/view_3"
        app:layout_constraintStart_toEndOf="@id/view_1"
        app:layout_constraintTop_toBottomOf="@+id/typeTitle" />

    <TextView
        android:id="@+id/textMedium"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/medium"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/view_3"
        app:layout_constraintStart_toEndOf="@id/view_1"
        app:layout_constraintTop_toTopOf="@id/view_2" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:elevation="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_medium"
        app:layout_constraintBottom_toTopOf="@id/textMediumPrice"
        app:layout_constraintEnd_toStartOf="@id/view_3"
        app:layout_constraintStart_toEndOf="@id/view_1"
        app:layout_constraintTop_toBottomOf="@+id/textMedium" />

    <TextView
        android:id="@+id/textMediumPrice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/small"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/view_2"
        app:layout_constraintEnd_toStartOf="@id/view_3"
        app:layout_constraintStart_toEndOf="@id/view_1" />

    <View
        android:id="@+id/view_3"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg_selected"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_2"
        app:layout_constraintTop_toBottomOf="@+id/typeTitle" />

    <TextView
        android:id="@+id/textLarge"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/large"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_2"
        app:layout_constraintTop_toTopOf="@id/view_3" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:elevation="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_large"
        app:layout_constraintBottom_toTopOf="@id/textLargePrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_2"
        app:layout_constraintTop_toBottomOf="@+id/textLarge" />

    <TextView
        android:id="@+id/textLargePrice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/small"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/view_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_2" />

    <View
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorLightBlue"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/circle_1"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/coffee_type"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_2"
        app:layout_constraintStart_toEndOf="@id/circle_1"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_2"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_2"
        app:layout_constraintStart_toEndOf="@id/text_1"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/coffee_size"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_3"
        app:layout_constraintStart_toEndOf="@id/circle_2"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_3"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_outline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_3"
        app:layout_constraintStart_toEndOf="@id/text_2"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/sugar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_4"
        app:layout_constraintStart_toEndOf="@id/circle_3"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_4"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_outline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_4"
        app:layout_constraintStart_toEndOf="@id/text_3"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/pay"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/circle_5"
        app:layout_constraintStart_toEndOf="@id/circle_4"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <ImageView
        android:id="@+id/circle_5"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_outline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toStartOf="@id/text_5"
        app:layout_constraintStart_toEndOf="@id/text_4"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

    <TextView
        android:id="@+id/text_5"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_full"
        android:text="@string/brewing"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/circle_5"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout" />

</android.support.constraint.ConstraintLayout>
